# zip-browser-web-archive

./: .gitignore  package-lock.json  package.json
app/: index.html  package.json  vite.config.ts
app/src/: App.vue
app/src/components/browser/: BreadcrumbNav.vue  FileBrowser.vue  FileMetadataPanel.vue  FileRow.vue  FileTable.vue
app/src/components/layout/: AppHeader.vue
app/src/components/preview/: FallbackPreview.vue  ImagePreview.vue  MediaPreview.vue  PdfPreview.vue  PreviewModal.vue  TextPreview.vue
app/src/components/shared/: PasswordPrompt.vue
app/src/components/upload/: DropZone.vue
app/src/composables/: useFilePreview.ts  useNavigation.ts  useZipArchive.ts
app/src/lib/: file-utils.ts  wasm-bridge.ts
app/src/types/: index.ts
crates/zip-core/: Cargo.toml
crates/zip-core/src/: archive.rs  bomb_detect.rs  extract.rs  lib.rs  metadata.rs
scripts/: build-wasm.sh
