[package]
name = "zip-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
zip = { version = "2", default-features = false, features = [
    "deflate",
    "aes-crypto",
] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
